# File-Share

./: .gitignore  CMakeLists.txt  Makefile  PhasewiseChecklist.md  README.md
include/: CLI.h  Client.h  Common.h  FileManager.h  HighPerformanceServer.h  Logger.h  Peer.h  PeerManager.h  Protocol.h  Server.h  ThreadPool.h
src/: CLI.cpp  Client.cpp  FileManager.cpp  HighPerformanceServer.cpp  Peer.cpp  PeerManager.cpp  Protocol.cpp  Server.cpp  ThreadPool.cpp  main.cpp
tests/: CMakeLists.txt  test_file_manager.cpp  test_peer.cpp  test_performance.cpp  test_protocol.cpp  test_thread_pool.cpp
